# SuperNOVAS

./: .cproject  .gitignore  .project  BingSiteAuth.xml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Doxyfile.local  Gemfile  LEGACY.md  Makefile  README-headless.md  README.md  README_CMAKE.md  TODO  _config.yml  a.out  bugs-notes  build.mk  codecov.yml  config.mk  index.md  novas.c  tatus
benchmark/: .gitignore  CMakeLists.txt  Makefile  benchmark-astropy.py  benchmark-nutation.c  benchmark-place.c
cpp/: .gitignore  Angle.cpp  Apparent.cpp  CMakeLists.txt  Calendar.cpp  CatalogEntry.cpp  CatalogSystem.cpp  Coordinate.cpp  Distance.cpp  EOP.cpp  Ecliptic.cpp  Equatorial.cpp  EquatorialSystem.cpp  Equinox.cpp  Frame.cpp  Galactic.cpp  Geometric.cpp  Horizontal.cpp  Interval.cpp  Makefile  Observer.cpp  Orbital.cpp  Position.cpp  Pressure.cpp  ScalarEvolution.cpp  ScalarVelocity.cpp  Site.cpp  Source.cpp  Speed.cpp  Spherical.cpp  System.cpp  Temperature.cpp  Time.cpp  TimeAngle.cpp  Track.cpp  Vector.cpp  Velocity.cpp  Weather.cpp  supernovas.h  supernovas.hpp
cpp/html/: Angle_8cpp.html  Apparent_8cpp.html  CatalogEntry_8cpp.html  Distance_8cpp.html  EOP_8cpp.html  Ecliptic_8cpp.html  Equatorial_8cpp.html  Frame_8cpp.html  Galactic_8cpp.html  Geometric_8cpp.html  Horizontal_8cpp.html  Interval_8cpp.html  Observer_8cpp.html  Position_8cpp.html  Position_8cpp.js  Pressure_8cpp.html  Site_8cpp.html  Source_8cpp.html  Speed_8cpp.html  Spherical_8cpp.html  System_8cpp.html  Temperature_8cpp.html  TimeAngle_8cpp.html  Time_8cpp.html  Vector_8cpp.html  Vector_8cpp.js  Velocity_8cpp.html  Weather_8cpp.html  annotated.html  annotated_dup.js  classAngle.html  classes.html  classsupernovas_1_1Angle.html  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_defs.html  navtreedata.js  navtreeindex0.js  (+3 more)
cpp/latex/: Angle_8cpp.tex  Apparent_8cpp.tex  CatalogEntry_8cpp.tex  Distance_8cpp.tex  EOP_8cpp.tex  Ecliptic_8cpp.tex  Equatorial_8cpp.tex  Frame_8cpp.tex  Galactic_8cpp.tex  Geometric_8cpp.tex  Horizontal_8cpp.tex  Interval_8cpp.tex  Observer_8cpp.tex  Position_8cpp.tex  Pressure_8cpp.tex  Site_8cpp.tex  Source_8cpp.tex  Speed_8cpp.tex  Spherical_8cpp.tex  System_8cpp.tex  Temperature_8cpp.tex  TimeAngle_8cpp.tex  Time_8cpp.tex  Vector_8cpp.tex  Velocity_8cpp.tex  Weather_8cpp.tex  annotated.tex  classAngle.tex  classsupernovas_1_1Angle.tex  files.tex  refman.tex  supernovas_8hpp.tex  supernovas_8hpp_source.tex
cpp/test/: AngleTest  AngleTest.cpp  Makefile  PressureTest.cpp  SpeedTest.cpp  TestUtil.hpp  TimeAngleTest.cpp
doc/: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile-cpp  Doxyfile.cpp  Makefile  NOVAS-legacy.md  README.md  SuperNOVAS_vs_astropy.md
doc/html/: annotated.html  annotated_dup.js  calendar_8c.html  calendar_8c.js  cio_8c.html  cio_8c.js  classes.html  deprecated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  doxygen_extra.css  earth_8c.html  earth_8c.js  eph__manager_8c.html  eph__manager_8c.js  ephemeris_8c.html  ephemeris_8c.js  equator_8c.html  equator_8c.js  equinox_8c.html  equinox_8c.js  files.html  frames_8c.html  frames_8c.js  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  (+162 more)
doc/legacy/: CIO_LOCATOR.md
doc/src/: docedit.c
examples/: CMakeLists.txt  Makefile  example-calceph  example-calceph.c  example-cspice  example-cspice.c  example-high-z  example-high-z.c  example-high-z.cpp  example-orbital  example-orbital.c  example-rise-set.c  example-star.c  example-star.cpp  example-time.c  example-time.cpp  example.c  readeph0.c
legacy/: .gitignore  CMakeLists.txt  Makefile  README.md  cio_file.c  cio_filegen.c  eph_manager.c  eph_manager.h  novascon.c  novascon.h  nutation.h  readeph0.c  solarsystem.h  solsys1.c  solsys1.h  solsys2.c  solsys2.h
test/: .gitignore  CMakeLists.txt  Makefile  gmon.out  test_cio_file
test/bad-cio-data/: bad-1.txt  bad-2.txt
test/cpp/: .gitignore  AngleTest.cpp  ApparentTest.cpp  CalendarTest.cpp  CatalogEntryTest.cpp  CoordinateTest.cpp  DistanceTest.cpp  EOPTest.cpp  EclipticTest.cpp  EquatorialTest.cpp  EquinoxTest.cpp  FrameTest.cpp  GalacticTest.cpp  GeometricTest.cpp  HorizontalTest.cpp  IntervalTest.cpp  Makefile  ObserverTest.cpp  OrbitalTest.cpp  PlanetTest.cpp  PositionTest.cpp  PressureTest.cpp  ScalarVelocityTest.cpp  SiteTest.cpp  SourceTest.cpp  SpeedTest.cpp  SphericalTest.cpp  TemperatureTest.cpp  TestUtil.hpp  TimeAngleTest.cpp  TimeTest.cpp  TrackTest.cpp  VectorTest.cpp  VelocityTest.cpp  WeatherTest.cpp
test/ephem/: README.md  de440s-j2000.bsp  mar097-j2000.bsp  spkmerge-rip-de440s.cmd  spkmerge-rip-mar097.cmd
test/novasc3.1/: aberration.out  astro_place.out  cal_date.out  cel2ter.out  cel_pole.out  cio_basis.out  cio_location.out  cio_ra.out  e_tilt.out  ecl2equ_vec.out  ee_ct.out  ephemeris.out  equ2ecl.out  equ2gal.out  equ2hor-refract.out  equ2hor.out  era.out  frame_tie.out  gcrs2equ.out  geo_posvel.out  grav_def.out  iau2000a.out  iau2000b.out  init.out  ira_equinox.out  light_time.out  limb_angle.out  local_place.out  make_cat_entry.out  make_object.out  mean_star.out  nu2000k.out  nutation.out  nutation_angles.out  place.out  precession.out  rad_vel.out  refract.out  sidereal_time.out  tbd2tt.out  (+5 more)
test/reference/: aberration.out  astro_place.out  cal_date.out  cel2ter.out  cel_pole.out  cio_basis.out  cio_location.file.out  cio_location.out  cio_ra.out  e_tilt.out  ecl2equ_vec.out  ee_ct.out  ephemeris.out  equ2ecl.out  equ2gal.out  equ2hor-refract.out  equ2hor.out  era.out  frame_tie.out  gcrs2equ.out  geo_posvel.out  grav_def.out  iau2000a.out  iau2000b.out  init.out  ira_equinox.out  light_time.out  limb_angle.out  local_place.out  make_object.out  make_observer.out  mean_obliq.out  mean_star.out  nu2000k.out  place.out  (+13 more)
(+603 files in other folders)
